net/sdk/network/Azure.ResourceManager.Network/tests/SessionRecords/RouteTableTests/SubnetRouteTableTest[2021-04-01]Async.json
{
  "Entries": [
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c?api-version=**",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-e3aa2839fd40a05d3d7bad76661236b7-0becf5ce68657a00-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "19b1398f9156cc7dcacd8b4044117e5f",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "748",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:14 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "45a4a20a-b807-4b86-9260-13ae4e07cb90",
        "x-ms-ratelimit-remaining-subscription-reads": "11684",
        "x-ms-request-id": "45a4a20a-b807-4b86-9260-13ae4e07cb90",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155314Z:45a4a20a-b807-4b86-9260-13ae4e07cb90"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "authorizationSource": "RoleBased",
        "managedByTenants": [],
        "tags": {
          "TagKey-9823": "TagValue-1254",
          "TagKey-3481": "TagValue-320",
          "TagKey-4926": "TagValue-1187",
          "TagKey-751": "TagValue-3921",
          "TagKey-1866": "TagValue-8559",
          "TagKey-3094": "TagValue-9190",
          "TagKey-2449": "TagValue-9",
          "TagKey-8379": "TagValue-164",
          "TagKey-7470": "TagValue-2205",
          "TagKey-4236": "TagValue-3698",
          "TagKey-5316": "TagValue-2725"
        },
        "subscriptionId": "db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "tenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
        "displayName": ".NET Mgmt SDK Test with TTL = 1 Day",
        "state": "Enabled",
        "subscriptionPolicies": {
          "locationPlacementId": "Internal_2014-09-01",
          "quotaId": "Internal_2014-09-01",
          "spendingLimit": "Off"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourcegroups/csmrg2837?api-version=**",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "21",
        "Content-Type": "application/json",
        "traceparent": "00-0953444a1c0c46d22e94e0d589acc97f-b38f5a60709169c5-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "4349d3cbc7190070fc013c63ac7d15ee",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "215",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:14 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "71750f23-c7ff-4105-953a-b195bf369a86",
        "x-ms-ratelimit-remaining-subscription-writes": "1118",
        "x-ms-request-id": "71750f23-c7ff-4105-953a-b195bf369a86",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155315Z:71750f23-c7ff-4105-953a-b195bf369a86"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2837",
        "name": "csmrg2837",
        "type": "Microsoft.Resources/resourceGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2837/providers/Microsoft.Network/routeTables/azsmnet4213?api-version=2021-04-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "182",
        "Content-Type": "application/json",
        "traceparent": "00-45bc05874e00eedca6845a56a8335384-25982ae3c9ce847a-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "7e3f6053e963bc4286e85b3cd5d724c6",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "properties": {
          "routes": [
            {
              "properties": {
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              }
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/b0a97bbf-29b1-43f4-a6f5-fa503c0b9358?api-version=2021-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1072",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:17 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "8b07cd40-f02d-4ffc-ae65-150fdc65f256",
        "x-ms-client-request-id": "7e3f6053e963bc4286e85b3cd5d724c6",
        "x-ms-correlation-request-id": "20e1bb9f-647a-493f-b27f-bb5191f44d3c",
        "x-ms-ratelimit-remaining-subscription-writes": "1117",
        "x-ms-request-id": "b0a97bbf-29b1-43f4-a6f5-fa503c0b9358",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155317Z:20e1bb9f-647a-493f-b27f-bb5191f44d3c"
      },
      "ResponseBody": {
        "name": "azsmnet4213",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2837/providers/Microsoft.Network/routeTables/azsmnet4213",
        "etag": "W/\"511cdbef-488b-4bc4-9fc1-6e4c8f983215\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "738c870a-f9ea-4ddc-825f-c298880b0ccc",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet296",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2837/providers/Microsoft.Network/routeTables/azsmnet4213/routes/azsmnet296",
              "etag": "W/\"511cdbef-488b-4bc4-9fc1-6e4c8f983215\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/b0a97bbf-29b1-43f4-a6f5-fa503c0b9358?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-45bc05874e00eedca6845a56a8335384-5421bc62d60596c1-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "fe2a84c14df25f70005c4088a4c02b65",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:17 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "6b07f0fc-953b-445a-802e-d3f371f80a0c",
        "x-ms-client-request-id": "fe2a84c14df25f70005c4088a4c02b65",
        "x-ms-correlation-request-id": "980e6162-7c19-47f3-9ae8-617256cacd78",
        "x-ms-ratelimit-remaining-subscription-reads": "11683",
        "x-ms-request-id": "a1cf3ea2-5f8f-4655-b194-a0afa44ffeea",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155318Z:980e6162-7c19-47f3-9ae8-617256cacd78"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2837/providers/Microsoft.Network/routeTables/azsmnet4213?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-45bc05874e00eedca6845a56a8335384-61692690daffcb9d-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "b55ee63e355de1171f2625d2a9d99e36",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1074",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:17 GMT",
        "ETag": "W/\"3458717f-6c84-4f87-b2b9-030a96afdec0\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "b1007bee-d939-4459-8a13-dc86f283c637",
        "x-ms-client-request-id": "b55ee63e355de1171f2625d2a9d99e36",
        "x-ms-correlation-request-id": "0d1b362c-c21f-4a90-a2a4-af00e5845432",
        "x-ms-ratelimit-remaining-subscription-reads": "11682",
        "x-ms-request-id": "06b21ee4-7836-4548-b0eb-d34113cbcda1",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155318Z:0d1b362c-c21f-4a90-a2a4-af00e5845432"
      },
      "ResponseBody": {
        "name": "azsmnet4213",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2837/providers/Microsoft.Network/routeTables/azsmnet4213",
        "etag": "W/\"3458717f-6c84-4f87-b2b9-030a96afdec0\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "738c870a-f9ea-4ddc-825f-c298880b0ccc",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet296",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2837/providers/Microsoft.Network/routeTables/azsmnet4213/routes/azsmnet296",
              "etag": "W/\"3458717f-6c84-4f87-b2b9-030a96afdec0\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2837/providers/Microsoft.Network/routeTables/azsmnet4213?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-8553d85ffed63831f5a8a5e9a3043ecf-01bd270f42d336b8-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "517a097226acd1d4ef314c1831b97598",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1074",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:18 GMT",
        "ETag": "W/\"3458717f-6c84-4f87-b2b9-030a96afdec0\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "b026e8d5-0996-4d30-b2c8-e89e7576991e",
        "x-ms-client-request-id": "517a097226acd1d4ef314c1831b97598",
        "x-ms-correlation-request-id": "f7a2bf12-2c85-4281-a4a6-548e6c1f717c",
        "x-ms-ratelimit-remaining-subscription-reads": "11681",
        "x-ms-request-id": "58e3c37a-c592-4451-8ff6-56711ec468e3",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155318Z:f7a2bf12-2c85-4281-a4a6-548e6c1f717c"
      },
      "ResponseBody": {
        "name": "azsmnet4213",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2837/providers/Microsoft.Network/routeTables/azsmnet4213",
        "etag": "W/\"3458717f-6c84-4f87-b2b9-030a96afdec0\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "738c870a-f9ea-4ddc-825f-c298880b0ccc",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet296",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2837/providers/Microsoft.Network/routeTables/azsmnet4213/routes/azsmnet296",
              "etag": "W/\"3458717f-6c84-4f87-b2b9-030a96afdec0\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2837/providers/Microsoft.Network/virtualNetworks/azsmnet5701?api-version=2025-07-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "387",
        "Content-Type": "application/json",
        "traceparent": "00-d5a407a6c10bf546cbfce68fca0c8c9c-5a314899d1ef0d57-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "bff1372a8cf4496ddfcc279db527be0a",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": [
              "10.1.1.1",
              "10.1.2.4"
            ]
          },
          "subnets": [
            {
              "properties": {
                "addressPrefix": "10.0.0.0/24",
                "routeTable": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2837/providers/Microsoft.Network/routeTables/azsmnet4213"
                }
              }
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/fe99e741-81e4-447f-a643-8fd07ba7de2a?api-version=2025-07-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1167",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:20 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "3",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "471773d0-5eed-49ad-aaa6-2d458962f271",
        "x-ms-client-request-id": "bff1372a8cf4496ddfcc279db527be0a",
        "x-ms-correlation-request-id": "e751df02-f2f4-4e46-b8fa-8c49b0a51f25",
        "x-ms-ratelimit-remaining-subscription-writes": "1116",
        "x-ms-request-id": "fe99e741-81e4-447f-a643-8fd07ba7de2a",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155321Z:e751df02-f2f4-4e46-b8fa-8c49b0a51f25"
      },
      "ResponseBody": {
        "name": "azsmnet5701",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2837/providers/Microsoft.Network/virtualNetworks/azsmnet5701",
        "etag": "W/\"1785ded6-4386-43d9-85ef-0e4ac683dc3d\"",
        "type": "Microsoft.Network/virtualNetworks",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "b95ac525-897a-4b36-81f3-d5a29ec5e4aa",
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": [
              "10.1.1.1",
              "10.1.2.4"
            ]
          },
          "subnets": [
            {
              "name": "azsmnet2437",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2837/providers/Microsoft.Network/virtualNetworks/azsmnet5701/subnets/azsmnet2437",
              "etag": "W/\"1785ded6-4386-43d9-85ef-0e4ac683dc3d\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "10.0.0.0/24",
                "routeTable": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2837/providers/Microsoft.Network/routeTables/azsmnet4213"
                },
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/fe99e741-81e4-447f-a643-8fd07ba7de2a?api-version=2025-07-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-d5a407a6c10bf546cbfce68fca0c8c9c-ecb6af1d3e61ecf9-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "66aece6db244ed15e4624607a9527b25",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "23",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:21 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "10",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "b1282518-c6b9-4ff9-a105-92abe151326c",
        "x-ms-client-request-id": "66aece6db244ed15e4624607a9527b25",
        "x-ms-correlation-request-id": "5066c799-6c73-4a9b-a650-bcaf2fec7569",
        "x-ms-ratelimit-remaining-subscription-reads": "11680",
        "x-ms-request-id": "2f91eda0-be50-437c-b8ba-e732cba27443",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155321Z:5066c799-6c73-4a9b-a650-bcaf2fec7569"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/fe99e741-81e4-447f-a643-8fd07ba7de2a?api-version=2025-07-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-d5a407a6c10bf546cbfce68fca0c8c9c-e91ef87838594253-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "d9a3275a8a5111212564f9c7a46e9a78",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:31 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "de1bcd37-3747-4623-abc6-311f8397c5e7",
        "x-ms-client-request-id": "d9a3275a8a5111212564f9c7a46e9a78",
        "x-ms-correlation-request-id": "2bbb79b6-8c4a-48cb-8f17-05c202a14075",
        "x-ms-ratelimit-remaining-subscription-reads": "11679",
        "x-ms-request-id": "18f82918-3ab5-4439-92dc-23798864dc56",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155332Z:2bbb79b6-8c4a-48cb-8f17-05c202a14075"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2837/providers/Microsoft.Network/virtualNetworks/azsmnet5701?api-version=2025-07-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-d5a407a6c10bf546cbfce68fca0c8c9c-0c02c8f749ca07e6-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "e62f9a1b577862c58659f556d10ae374",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1169",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:31 GMT",
        "ETag": "W/\"a007240b-83fc-4270-a894-a25f0b86b6c1\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "ca177e02-e596-4188-bf2e-3f5379345eb1",
        "x-ms-client-request-id": "e62f9a1b577862c58659f556d10ae374",
        "x-ms-correlation-request-id": "6730794b-1256-42bb-88e6-16d600068554",
        "x-ms-ratelimit-remaining-subscription-reads": "11678",
        "x-ms-request-id": "f0269fca-d955-4d20-8467-a2298946d7c5",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155332Z:6730794b-1256-42bb-88e6-16d600068554"
      },
      "ResponseBody": {
        "name": "azsmnet5701",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2837/providers/Microsoft.Network/virtualNetworks/azsmnet5701",
        "etag": "W/\"a007240b-83fc-4270-a894-a25f0b86b6c1\"",
        "type": "Microsoft.Network/virtualNetworks",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "b95ac525-897a-4b36-81f3-d5a29ec5e4aa",
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": [
              "10.1.1.1",
              "10.1.2.4"
            ]
          },
          "subnets": [
            {
              "name": "azsmnet2437",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2837/providers/Microsoft.Network/virtualNetworks/azsmnet5701/subnets/azsmnet2437",
              "etag": "W/\"a007240b-83fc-4270-a894-a25f0b86b6c1\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/24",
                "routeTable": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2837/providers/Microsoft.Network/routeTables/azsmnet4213"
                },
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2837/providers/Microsoft.Network/virtualNetworks/azsmnet5701/subnets/azsmnet2437?api-version=2025-07-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-f61c163c2476b7d454fb1d7b822d7739-030f4927cadbf112-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "87a3c3b0d7c3e23bad9d40dfb94d4975",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "619",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:32 GMT",
        "ETag": "W/\"a007240b-83fc-4270-a894-a25f0b86b6c1\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "561720b3-4d7c-4d1b-88c4-a8af5b5b17a6",
        "x-ms-client-request-id": "87a3c3b0d7c3e23bad9d40dfb94d4975",
        "x-ms-correlation-request-id": "db912131-7c15-4ee8-8501-f039c6923d1c",
        "x-ms-ratelimit-remaining-subscription-reads": "11677",
        "x-ms-request-id": "b372d59d-d087-44e1-bbb1-ddb6ccbe5621",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155333Z:db912131-7c15-4ee8-8501-f039c6923d1c"
      },
      "ResponseBody": {
        "name": "azsmnet2437",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2837/providers/Microsoft.Network/virtualNetworks/azsmnet5701/subnets/azsmnet2437",
        "etag": "W/\"a007240b-83fc-4270-a894-a25f0b86b6c1\"",
        "properties": {
          "provisioningState": "Succeeded",
          "addressPrefix": "10.0.0.0/24",
          "routeTable": {
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2837/providers/Microsoft.Network/routeTables/azsmnet4213"
          },
          "delegations": [],
          "privateEndpointNetworkPolicies": "Disabled",
          "privateLinkServiceNetworkPolicies": "Enabled"
        },
        "type": "Microsoft.Network/virtualNetworks/subnets"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2837/providers/Microsoft.Network/routeTables/azsmnet4213?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-724611355130c7ccdfa8be54c4125fdf-4e7e996750d0db89-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "0feccec8942203ad614053f894ca3f1b",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1287",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:32 GMT",
        "ETag": "W/\"ae55866b-652e-435d-acca-8534523e480d\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "50a808b8-f06f-475a-8343-a6b9bd0678a5",
        "x-ms-client-request-id": "0feccec8942203ad614053f894ca3f1b",
        "x-ms-correlation-request-id": "0f863ccb-0237-4be2-8c91-2e03cdd6dcc1",
        "x-ms-ratelimit-remaining-subscription-reads": "11676",
        "x-ms-request-id": "9643d76e-e1e0-4c24-b8dc-0a17661e8b25",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155333Z:0f863ccb-0237-4be2-8c91-2e03cdd6dcc1"
      },
      "ResponseBody": {
        "name": "azsmnet4213",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2837/providers/Microsoft.Network/routeTables/azsmnet4213",
        "etag": "W/\"ae55866b-652e-435d-acca-8534523e480d\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "738c870a-f9ea-4ddc-825f-c298880b0ccc",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet296",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2837/providers/Microsoft.Network/routeTables/azsmnet4213/routes/azsmnet296",
              "etag": "W/\"ae55866b-652e-435d-acca-8534523e480d\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ],
          "subnets": [
            {
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2837/providers/Microsoft.Network/virtualNetworks/azsmnet5701/subnets/azsmnet2437"
            }
          ]
        }
      }
    }
  ],
  "Variables": {
    "AZURE_AUTHORITY_HOST": "https://login.microsoftonline.com",
    "LOCATION": "westus",
    "RandomSeed": "1317832938",
    "RESOURCE_MANAGER_URL": null,
    "SUBSCRIPTION_ID": "db1ab6f0-4769-4b27-930e-01e2ef9c123c"
  }
}
